@@ -40,72 +40,6 @@
 namespace std 
 {
   template<typename _CharT, typename _Traits>
-    typename basic_streambuf<_CharT, _Traits>::int_type
-    basic_streambuf<_CharT, _Traits>::
-    sbumpc()
-    {
-      int_type __ret;
-      if (this->gptr() < this->egptr())
-	{
-	  __ret = traits_type::to_int_type(*this->gptr());
-	  this->gbump(1);
-	}
-      else 
-	__ret = this->uflow();
-      return __ret;
-    }
-
-  template<typename _CharT, typename _Traits>
-    typename basic_streambuf<_CharT, _Traits>::int_type
-    basic_streambuf<_CharT, _Traits>::
-    sputbackc(char_type __c) 
-    {
-      int_type __ret;
-      const bool __testpos = this->eback() < this->gptr();
-      if (!__testpos || !traits_type::eq(__c, this->gptr()[-1]))
-	__ret = this->pbackfail(traits_type::to_int_type(__c));
-      else 
-	{
-	  this->gbump(-1);
-	  __ret = traits_type::to_int_type(*this->gptr());
-	}
-      return __ret;
-    }
-  
-  template<typename _CharT, typename _Traits>
-    typename basic_streambuf<_CharT, _Traits>::int_type
-    basic_streambuf<_CharT, _Traits>::
-    sungetc()
-    {
-      int_type __ret;
-      if (this->eback() < this->gptr())
-	{
-	  this->gbump(-1);
-	  __ret = traits_type::to_int_type(*this->gptr());
-	}
-      else 
-	__ret = this->pbackfail();
-      return __ret;
-    }
-
-  template<typename _CharT, typename _Traits>
-    typename basic_streambuf<_CharT, _Traits>::int_type
-    basic_streambuf<_CharT, _Traits>::
-    sputc(char_type __c)
-    {
-      int_type __ret;
-      if (this->pptr() < this->epptr())
-	{
-	  *this->pptr() = __c;
-	  this->pbump(1);
-	  __ret = traits_type::to_int_type(__c);
-	}
-      else
-	__ret = this->overflow(traits_type::to_int_type(__c));
-      return __ret;
-    }
-
-  template<typename _CharT, typename _Traits>
     streamsize
     basic_streambuf<_CharT, _Traits>::
     xsgetn(char_type* __s, streamsize __n)
