@@ -1,3 +1,12 @@
+2003-06-25  Nathan C. Myers  <ncm-nospam@cantrip.org>
+
+	* include/bits/streambuf.tcc (sbumpc, sputbackc, sungetc,
+	sputc): Move inline, from here...
+	* include/std/std_streambuf.h: ... to here.
+
+	* include/std/std_streambuf.h (snextc, sbumpc, sgetc,
+	sputbackc, sungetc, sputc): Use __builtin_expect.
+
 2003-06-24  Phil Edwards  <pme@gcc.gnu.org>
 
 	* docs/doxygen/mainpage.html:  Use a useful title.
